v1.1.3: remove add-reads